Libera de correções #9 e #10

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
 v1.6.3
 - add gitlab-7.7 support [#7]
 - fix encoding error exception when unziping files [#9]
-- about list CHANGELOG
+- update About to list CHANGELOG
